corrected colors for contrast issues

--- a/week01/styles/base.css
+++ b/week01/styles/base.css
@@ -2,7 +2,7 @@
 :root {
   --charcoal: #2e4057;
   --snow: #fcf7f8;
-  --light-sea-green: #21a0a0;
+  --light-sea-green: #bfd1d1;
 
   --font-family: "Lato", sans-serif;
 }
@@ -55,7 +55,7 @@ nav ul {
 }
 
 nav ul li a {
-  color: var(--light-sea-green);
+  color: var(--snow);
   text-decoration: none;
   font-weight: bold;
 }
